Fix bug where track overviews get slightly wrong width when shown first time

--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,7 @@ form {
 }
 .app-playlist-content-wrapper {
   padding: .5em 1em;
+  overflow: hidden;
 }
 
 .app-separator {
